--- a/templates/recipes/base.html
+++ b/templates/recipes/base.html
@@ -22,9 +22,9 @@
 
 		<div id="nav">
 			<ul>
-				<li>Option 1</li>
-				<li>Option 2</li>
-				<li>Option 3</li>
+				<li><a href="/">Home</a></li>
+				<li><a href="/recipes">Recipes</a></li>
+				<li><a href="/tags">Tags</a></li>
 			</ul>
 		</div>	
 
@@ -71,5 +71,5 @@
 
 
 
-</body>-->
+</body>
 </html>
