--- a/templates/recipes/recipe_add.html
+++ b/templates/recipes/recipe_add.html
@@ -1,15 +1,10 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN">
-<html lang="en">
-<head>
-    <title>Add recipe</title>
-</head>
+{% extends "recipes/base.html" %}
 
-<body>
+{% block content %}
     <form action="." method="POST">
         <table>
             {{ form.as_table }}
         </table>
         <p><input type="submit" value="Submit"></p>
     </form>
-</body>
-</html>
+{% endblock %}
