--- a/templates/recipes/recipe_add_thanks.html
+++ b/templates/recipes/recipe_add_thanks.html
@@ -1,10 +1,6 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN">
-<html lang="en">
-<head>
-    <title>Recipe has been created</title>
-</head>
+{% extends "recipes/base.html" %}
 
-<body>
-    Thanks for creating this recipe
-</body>
-</html>
+
+{% block content %}
+Thanks for submitting this recipe
+{% endblock %}
