added some help text and changed links to categories to use slug

--- a/templates/recipes/base.html
+++ b/templates/recipes/base.html
@@ -40,7 +40,7 @@
 		<div id="leftcolumn">
 			<ul>
 				{% for category in categories_list %}
-				<li><a href="/recipes/category/{{category.id}}">{{category.name}}</a></li>
+				<li><a href="/recipes/categories/{{category.slug}}">{{category.name}}</a></li>
 				{% endfor %}
 			</ul>
 		</div>
