-Refactoring of urls a bit -Remove hard-coded urls, replace with url template tag -Templates are a bit broken right now, need to work on some more

--- a/templates/recipes/recipe_detail.html
+++ b/templates/recipes/recipe_detail.html
@@ -50,7 +50,7 @@
 	<p><i>Tags: </i>
 	  {% tags_for_object recipe as tag_list %}
 	  {% for tag in tag_list %}
-	  <a href="{% url recipe_tag_detail tag %}">{{tag}}</a>
+	  <a href="{% url recipe_list_by_tag tag %}">{{tag}}</a>
 	  {% endfor %}
         </p>
 
