made media work on slicehost site

--- a/django-recipes/templates/recipes/base.html
+++ b/django-recipes/templates/recipes/base.html
@@ -7,7 +7,7 @@
 	<script type="text/javascript"></script>
 	<title>{% block title %}{% endblock %}</title>
 	<style type="text/css" media="all">
-		@import "/media/css/recipes.css";
+		@import "/recipes_media/css/recipes.css";
 	</style>
 
 </head>
