--- a/django-recipes/templates/recipes/base.html
+++ b/django-recipes/templates/recipes/base.html
@@ -17,7 +17,7 @@
 	<div id="maincontainer">
 
 		<div id="topsection">
-			<h1>Grant Family Recipes</h1>
+			<h1>My Recipes</h1>
 		</div>
 
 		<div id="nav">
