-Made category links work -Added "edit" link to recipe detail page -Added threadedcomments to externals

--- a/recipes_media/css/recipes.css
+++ b/recipes_media/css/recipes.css
@@ -141,6 +141,10 @@ html, body {
 	font-style: italic;
 	}
 
+.recipe-links {
+	text-align: right;
+}
+
 .step {
 /* 	border-bottom: 1px solid #888;
  	border-top: 2px solid #888;*/
