--- a/templates/recipes/base.html
+++ b/templates/recipes/base.html
@@ -6,9 +6,11 @@
 	<meta http-equiv="content-type" content="text/html; charset=iso-8859-1" />
 	<script type="text/javascript"></script>
 	<title>{% block title %}{% endblock %}</title>
-	<style type="text/css" media="all">
+<!--	<style type="text/css" media="all">
 		@import "/recipes_media/css/recipes.css";
-	</style>
+	</style>-->
+	<link rel="stylesheet" type="text/css" href="/recipes_media/css/recipes-screen.css" media="screen" /> 
+	<link rel="stylesheet" type="text/css" href="/recipes_media/css/recipes-print.css" media="print" /> 
 
 </head>
 
