--- a/templates/recipes/base.html
+++ b/templates/recipes/base.html
@@ -19,7 +19,7 @@
 	<div id="maincontainer">
 
 		<div id="topsection">
-			<h1>My Recipes</h1>
+			<h1>Dave's Recipes</h1>
 		</div>
 
 		<div id="nav">
@@ -73,7 +73,7 @@
 			{% block footer %}
 			<hr>
 			<p>Thanks for visiting my site.</p>
-			<p>Copyright 2007 David Grant and Cathy Grant</p>
+			<p>Copyright 2007-2009 David Grant</p>
 			{% endblock %}
 		</div>
 		
