--- a/recipes_media/css/recipes-screen.css
+++ b/recipes_media/css/recipes-screen.css
@@ -26,29 +26,33 @@ html, body {
 	}
 
 #maincontainer {
-	background:#ccaa55;
+	/*background:#ccaa55;*/
     width:1024px; /* Width of main container */
     margin:0 auto; /* Center the container on page */
-	background: url(leftcolumn-bg.png) top left repeat-y;
+	/*background: url(leftcolumn-bg.png) top left repeat-y;*/
 	}
 
 #topsection {
 	/*background:#854151;*/
-	background: url(banner.jpg);
-	height:214px; /* Height of top section */
-	line-height:214px;
+	/*background: url(banner.jpg);*/
+	/*height:214px; /* Height of top section */
+	height:110px; /* Height of top section */
+	/*line-height:214px;*/
+	line-height:90px;
 	}
 #topsection h1 {
 	margin: 0;
 	padding-top: 15px;
 	color: #FFFFF;
-	font-size: 60px;
+	font-size: 50px;
 	font-family: verdana;
 	}
 #nav {
-    background:#665533;
+    /*background:#665533;*/
+    background:#DDD;
     padding: 5px;
     color: #fff;
+    font-size: 20px;
     }
 #nav ul {
 	margin: 0;
@@ -66,7 +70,7 @@ html, body {
 	padding: 0;
 	margin-bottom: 0px;
 /* 	margin-left: 200px; */
-	background: #bbaa77;
+	/*background: #bbaa77;*/
 	}
 #contentcolumn{
 /*	background: #ccaa55;*/
@@ -82,7 +86,8 @@ html, body {
 	margin-top: 0px;
 	padding: 0;
 	margin-left: -1024px;
-	background: #bbaa77;
+	/*background: #bbaa77;*/
+	background: #DDD;
 	}
 #leftcolumn ul {
 /*	padding: 0;
@@ -162,7 +167,8 @@ html, body {
 #footer {
 	clear: left;
 	width: 100%;
-	background: #555544;
+	/*background: #555544;*/
+	background: #888;
 	color: #FFF;
 	text-align: center;
 	padding: 4px 0;
