added GPL message and link to source code

--- a/templates/recipes/base.html
+++ b/templates/recipes/base.html
@@ -73,7 +73,7 @@
 			{% block footer %}
 			<hr>
 			<p>Thanks for visiting my site.</p>
-			<p>Copyright 2007-2009 David Grant</p>
+			<p>Source code is licensed under the GPLv2 and available at <a href="http://code.google.com/p/django-recipes">Google Code</a></p>
 			{% endblock %}
 		</div>
 		
