--- a/recipes_media/css/recipes-screen.css
+++ b/recipes_media/css/recipes-screen.css
@@ -20,8 +20,12 @@ html, body {
 /*	background:#bbaa77;*/
 	background:#ffffff;
 	color:#000;
-	font-family: helvetica, sans-serif;
-	font-family: "Lucida Sans Unicode","Lucida Grande",sans-serif;
+/*	font-family: helvetica, sans-serif;*/
+/*	font-family: "Lucida Sans Unicode","Lucida Grande",sans-serif;*/
+        font: 12pt/18pt 'Baskerville', 'Georgia', serif;
+        background-color: #FFFFFF;
+	color: #574f66;
+
 /* 	min-width:800px; */
 	}
 
@@ -45,7 +49,7 @@ html, body {
 	padding-top: 15px;
 	color: #FFFFF;
 	font-size: 50px;
-	font-family: verdana;
+/*	font-family: verdana;*/
 	}
 #nav {
     /*background:#665533;*/
