--- a/templates/recipes/recipe_detail.html
+++ b/templates/recipes/recipe_detail.html
@@ -1,20 +1,19 @@
 {% extends "recipes/base.html" %}
 {% load fractions %}
-{% load tagging_tags %}
 
 {% block content %}
         <div id="recipe-links">
-          <a href="/admin/recipes/recipe/{{recipe.id}}">edit</a>
+          <a href="/admin/recipes/recipe/{{ object.id }}">edit</a>
         </div>
 
 	<div id="recipe-preamble">
-		<h2>{{ recipe.title }}</h2>
-		<p class="recipe-summary">{{ recipe.summary }}</p>
+		<h2>{{ object.title }}</h2>
+		<p class="recipe-summary">{{ object.summary }}</p>
 	</div>
 
 	<!-- Ingredient/direction style #1 -->
-	{% if recipe.direction_set %}
-       	{% for direction in recipe.direction_set.all %}
+	{% if object.direction_set %}
+       	{% for direction in object.direction_set.all %}
 		<div class="step">
  			{% if direction.ingredient_set %}
 				<div class="ingredients-left">
@@ -36,51 +35,45 @@
 	<!--
 	<p>
 	Ingredients:
-		{% if recipe.direction_set %}
+		{% if object.direction_set %}
 			<ul>
-			{% for direction in recipe.direction_set.all %}
+			{% for direction in object.direction_set.all %}
 				{% for ingredient in direction.ingredient_set.all %}
 					<li>{{ingredient.amount|text_fraction}}{% if ingredient.amountMax %}-{{ingredient.amountMax|text_fraction}}{% endif %} {{ingredient.unit.plural_abbrev}} {% if ingredient.prep_method %} {{ingredient.prep_method}}{% endif %} {{ingredient.food}}</li>
 				{% endfor %}
 			{% endfor %}
 			</ul>
 		Directions:
-		{% for direction in recipe.direction_set.all %}
+		{% for direction in object.direction_set.all %}
 			{{ direction.text }}
 		{% endfor %}
 		{% endif %}
 	</p>
 	-->
-	<p><i>Tags: </i>
-	  {% tags_for_object recipe as tag_list %}
-	  {% for tag in tag_list %}
-	  <a href="{% url recipe_list_by_tag tag %}">{{tag}}</a>
-	  {% endfor %}
-        </p>
 
     <p><i>Extra Instructions:</i><br />
- 	   {{ recipe.instructions }}
+ 	   {{ object.instructions }}
     </p>
 
-	<p><i>Prep time: {{ recipe.prep_time }}</i></p>
-    {% if recipe.sources %}
+	<p><i>Prep time: {{ object.prep_time }}</i></p>
+    {% if object.sources %}
 
     <p><i>Sources:</i>
             <ul>
-            {% for source in recipe.sources.all %}
+            {% for source in object.sources.all %}
                 <li>{{ source }}</li>
             {% endfor %}
             </ul>
     {% endif %}
 
-    {% if recipe.category %}
-    <p><i>Category:</i> <a href="/recipes/category/{{recipe.category.id}}">{{ recipe.category }}</a></p>
+    {% if object.category %}
+    <p><i>Category:</i> <a href="/recipes/category/{{ object.category.id }}">{{ object.category }}</a></p>
     {% endif %}
 
-    {% if recipe.photo_set %}
+    {% if object.photo_set %}
         <h3>Photos:</h3>
             <ul>
-            {% for photo in recipe.photo_set.all %}
+            {% for photo in object.photo_set.all %}
                 <li><a href="/media/{{ photo.image }}"><img width="300" src="/media/{{ photo.image }}"></img></a></li>
             {% endfor %}
             </ul>
