--- a/templates/recipes/recipe_detail.html
+++ b/templates/recipes/recipe_detail.html
@@ -12,11 +12,11 @@
 	</div>
 
 	<!-- Ingredient/direction style #1 -->
-       	{% for direction in object.direction_set.all %}
+       	{% for direction in object.directions.all %}
 		<div class="step">
 				<div class="ingredients-left">
 					<ul class="ingredients">
-						{% for ingredient in direction.ingredient_set.all %}
+						{% for ingredient in direction.ingredients.all %}
 						<li>{{ingredient.amount|text_fraction}}{% if ingredient.amountMax %}-{{ingredient.amountMax|text_fraction}}{% endif %} {{ingredient.unit.plural_abbrev}} {% if ingredient.prep_method %} {{ingredient.prep_method}} {% endif %}{{ingredient.food.name}}{% if ingredient.instruction %}, {{ingredient.instruction}}{% endif %}</li>
 						{% endfor %}
 					</ul>
