--- a/static/css/recipes.css
+++ b/static/css/recipes.css
@@ -1,59 +1,40 @@
-/*
-vibrant
-	#775511
-	#775522
-	#bb4400
-	#ffaa00
-	#ddcc55
-
-dull
-	#665533
-	#555544
-	#996644
-	#ccaa55
-	#bbaa77
-*/
-
 html, body {
 	margin: 0;
 	padding: 0;
-/*	background:#bbaa77;*/
-	background:#ffffff;
-	color:#000;
-	font-family: helvetica, sans-serif;
-	font-family: "Lucida Sans Unicode","Lucida Grande",sans-serif;
-/* 	min-width:800px; */
+/*	background:#ffffff;*/
+/*	color:#000;*/
+/*	font-family: helvetica, sans-serif;*/
+/*	font-family: "Lucida Sans Unicode","Lucida Grande",sans-serif;*/
 	}
 
 #maincontainer {
-	background:#ccaa55;
+/*	background:#ccaa55;*/
     width:1024px; /* Width of main container */
     margin:0 auto; /* Center the container on page */
-	background: url(leftcolumn-bg.png) top left repeat-y;
+/*	background: url(leftcolumn-bg.png) top left repeat-y;*/
 	}
 
 #topsection {
 	/*background:#854151;*/
-	background: url(banner.jpg);
+/*	background: url(banner.jpg);*/
 	height:214px; /* Height of top section */
 	line-height:214px;
 	}
 #topsection h1 {
 	margin: 0;
 	padding-top: 15px;
-	color: #FFFFF;
+/*	color: #FFFFF;*/
 	font-size: 60px;
-	font-family: verdana;
+/*	font-family: verdana;*/
 	}
 #nav {
     background:#665533;
     padding: 5px;
-    color: #fff;
+/*    color: #fff;*/
     }
 #nav ul {
 	margin: 0;
 	padding: 0;
-/*	list-style: none;*/
 	}
 #nav li {
 	display: inline;
@@ -65,16 +46,12 @@ html, body {
 	width: 100%;
 	padding: 0;
 	margin-bottom: 0px;
-/* 	margin-left: 200px; */
-	background: #bbaa77;
+/*	background: #bbaa77;*/
 	}
 #contentcolumn{
-/*	background: #ccaa55;*/
-	background: #ffffff;
+/*	background: #ffffff;*/
 	margin-left: 200px;
 	padding: 10px 10px 10px 10px;
-/*	margin-bottom: 10px;*/
-/* 	margin-top: -20px; */
 	}
 #leftcolumn{
 	float: left;
@@ -82,13 +59,8 @@ html, body {
 	margin-top: 0px;
 	padding: 0;
 	margin-left: -1024px;
-	background: #bbaa77;
+/*	background: #bbaa77;*/
 	}
-#leftcolumn ul {
-/*	padding: 0;
-	margin: 0;*/
-/*	list-style: none;*/
-}
 #recipe-preamble {
 	text-align: center;
 }
@@ -96,15 +68,12 @@ html, body {
 }
 
 .ingredients-left {
-/*     background:#eee; */
 	float: left;
 	width: 300px;
 	text-align: right;
 	margin: 0px 0px 0px 100px;
 	padding: 0px;
 	font-style: italic;
-/* 	border: thin dotted black; */
-/* 	overflow:auto; */
     }
 .ingredients-left ul {
 	list-style: none;
@@ -115,12 +84,10 @@ html, body {
 	padding: 2px;
 	}
 .directions {
-/*     background:#eee; */
 	float: right;
 	width: 300px;
 	margin: 0px 100px 0px 0px;
 	padding: 0px 2px;
-/* 	overflow:auto; */
     }
 .directions ul {
 	list-style: none;
@@ -130,13 +97,6 @@ html, body {
 .directions li {
 	padding: 2px;
 	}
-/* .clear { */
-/*     background:#fff; */
-/* 	clear: both; */
-/* 	overflow:auto; */
-/* 	margin: 0px; */
-/* 	padding: 0; */
-/*     } */
 .recipe-summary {
 	font-style: italic;
 	}
@@ -146,8 +106,6 @@ html, body {
 }
 
 .step {
-/* 	border-bottom: 1px solid #888;
- 	border-top: 2px solid #888;*/
 	overflow: auto;
 	width: 100%;
 	}
@@ -162,18 +120,10 @@ html, body {
 #footer {
 	clear: left;
 	width: 100%;
-	background: #555544;
-	color: #FFF;
+/*	background: #555544;*/
+/*	color: #FFF;*/
 	text-align: center;
 	padding: 4px 0;
-	}
-
-ul.ingredients {
-	/*text-align: right;
-	list-style-type: none;
-	font-style: italic;
-	border-right: medium, solid, black;
-	margin-right: 70%;*/
 	}
 
 div.directions {
