--- a/templates/recipes/recipe_detail.html
+++ b/templates/recipes/recipe_detail.html
@@ -21,7 +21,7 @@
 				<div class="col-md-5 col-md-offset-1" style="border-top: 1px solid #888;">
 					<ul class="list-unstyled text-right">
 						{% for ingredient in direction.ingredients.all %}
-						<li style="margin-top: 5px;"><em>{{ingredient.combined_amount}}</em></li>
+						<li style="margin-top: 5px;"><em>{{ingredient.formatted_amount}}</em></li>
 						{% endfor %}
 					</ul>
 				</div>
