--- a/templates/recipes/recipe_detail.html
+++ b/templates/recipes/recipe_detail.html
@@ -1,5 +1,4 @@
 {% extends "recipes/base.html" %}
-{% load fractions %}
 
 {% block content %}
 <!--
@@ -21,7 +20,7 @@
 				<div class="col-md-5 col-md-offset-1" style="border-top: 1px solid #888;">
 					<ul class="list-unstyled text-right">
 						{% for ingredient in direction.ingredients.all %}
-						<li style="margin-top: 5px;"><em>{{ingredient.formatted_amount_old}}</em></li>
+						<li style="margin-top: 5px;"><em>{{ingredient.formatted_amount}}</em></li>
 						{% endfor %}
 					</ul>
 				</div>
