--- a/templates/recipes/recipe_detail.html
+++ b/templates/recipes/recipe_detail.html
@@ -11,6 +11,7 @@
 	  <div class="col-md-12 text-center">
 		<h2>{{ object.title }}</h2>
 		<p class="recipe-summary">{{ object.summary }}</p>
+		<p>{{ object.description }}</p>
 	  </div>
 	</div>
 
