--- a/templates/recipes/recipe_detail.html
+++ b/templates/recipes/recipe_detail.html
@@ -35,11 +35,16 @@
 
 	<hr/>
 
+    {% if object.instructions %}
     <p><i>Extra Instructions:</i><br />
  	   {{ object.instructions }}
     </p>
+    {% endif %}
 
+    {% if object.prep_time %}
 	<p><i>Prep time: {{ object.prep_time }}</i></p>
+    {% endif %}
+
     {% if object.sources %}
 
     <p><i>Sources:</i>
