--- a/templates/recipes/base.html
+++ b/templates/recipes/base.html
@@ -43,7 +43,7 @@
     <ul class="nav navbar-nav">
 	<li><a href="{% url 'recipe-home' %}">Home</a></li>
 	<li><a href="{% url 'recipe-list' %}">Recipes</a></li>
-
+	<li><a href="{% url 'food-conversion-list' %}">Weight Conversions</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
 	{% if user.is_authenticated %}
