--- a/templates/recipes/base.html
+++ b/templates/recipes/base.html
@@ -12,12 +12,9 @@
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap-theme.min.css">
 	-->
+	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
 	<link rel="stylesheet" href="http://bootswatch.com/readable/bootstrap.min.css">
 	<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
-
-	<link rel="stylesheet" type="text/css" href="{% static "css/recipes-screen.css" %}" media="screen" /> 
-	<link rel="stylesheet" type="text/css" href="{% static "css/recipes-print.css" %}" media="print" /> 
-
 </head>
 
 <body>
