fixed up lines between rows in recipes

--- a/templates/recipes/base.html
+++ b/templates/recipes/base.html
@@ -15,6 +15,7 @@
 	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
 	<link rel="stylesheet" href="http://bootswatch.com/readable/bootstrap.min.css">
 	<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="{% static "test.css" %}">
 </head>
 
 <body>
