add food detail pop-up

--- a/templates/recipes/base.html
+++ b/templates/recipes/base.html
@@ -8,13 +8,19 @@
 	<script type="text/javascript"></script>
 	<title>{% block title %}{% endblock %}</title>
 
-	<!--	
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap-theme.min.css">
-	-->
-	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+	<link rel="stylesheet" href="//code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css">
+
+	<script src="//code.jquery.com/jquery-1.10.1.min.js"></script>
 	<link rel="stylesheet" href="http://bootswatch.com/readable/bootstrap.min.css">
 	<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+	<script type="text/javascript">
+
+	    $(document).ready(function() {
+		$(function () { $("[data-toggle='tooltip']").tooltip(); });
+	    }); 
+	</script>
 </head>
 
 <body>
