fixed unit tests

--- a/templates/recipes/recipe_detail.html
+++ b/templates/recipes/recipe_detail.html
@@ -29,8 +29,7 @@
 						{% for ingredient in ingredients %}
 						<span>
 							<li style="margin-top: 5px;"><em>
-								{{ingredient.0}}
-								{{ingredient.1}} 
+								{{ingredient.0}} {{ingredient.1}} 
 								{% if ingredient.4 %}
 								<span data-toggle="tooltip" style="border-bottom: dashed 1px;" title="{{ingredient.4}}">
 								{% else %}
